# TFSAppCargoTemplate

./: .gitignore  .scaffold.toml  CHANGELOG.md  CONTRACT.md  Makefile  README.md  TFSAPP_README.md  cargo-generate.toml  compose.override.yaml  compose.yaml
app/: .env  .env.dev  composer.json  package-lock.json  package.json  webpack.config.js
app/assets/: app.js  demo.js
app/assets/controllers/: demo_controller.js
app/assets/styles/: app.css
app/config/: bundles.php  reference.php  services.yaml
app/migrations/: Version20260629163713.php
app/src/: Kernel.php
app/src/Controller/: DemoController.php
app/src/Doctrine/: SqlitePragmasMiddleware.php
app/src/Entity/: DemoJob.php
app/src/EventSubscriber/: LocaleSubscriber.php
app/src/Message/: DemoPingMessage.php
app/src/MessageHandler/: DemoPingMessageHandler.php
app/src/Repository/: DemoJobRepository.php
app/templates/: base.html.twig
app/templates/demo/: index.html.twig
app/translations/: messages.en.yaml  messages.fr.yaml
desktop/: index.html  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docker/frankenphp/: Caddyfile  Dockerfile
