[package]
name = "{{ project-name }}"
version = "0.1.0"
description = "Tauri launcher for {{ product_name }}, a Symfony app served by FrankenPHP."
authors = ["{{ product_name }}"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
getrandom = "0.2"
ureq = "2"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
